<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/show_detail_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.75"
        android:background="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_card_height">

            <ImageView
                android:id="@+id/card_background_banner"
                android:layout_width="700dip"
                android:layout_height="@dimen/show_card_height"
                android:layout_gravity="right"
                android:scaleType="fitXY" />


            <ImageView
                android:id="@+id/card_background_dark_layer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/show_card_height"
                android:alpha="0.75"
                android:background="@android:color/black" />


            <LinearLayout
                android:id="@+id/card_list_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/item_photo"
                    android:layout_width="@dimen/show_poster_thumb_width"
                    android:layout_height="@dimen/show_poster_thumb_height"
                    android:padding="5dp"
                    android:src="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/show_label_text_size" />

                    <TextView
                        android:id="@+id/show_timings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/secondary_list_item_text_size" />

                    <TextView
                        android:id="@+id/show_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/tertiary_list_item_text_size" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ExpandableListView
                android:id="@+id/seasonExpandableListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/season_expand_collapse_layout"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:background="@color/black">

                <ImageView
                    android:id="@+id/season_expand_collapse_indicator"
                    android:layout_width="30dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/intra_detail_margin_views"
                    android:layout_marginRight="@dimen/intra_detail_margin_views"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/expand_collapse_indicator" />

                <TextView
                    android:id="@+id/selectEpisodeText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="Select Episode"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/list_item_text_size" />
            </RelativeLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/intra_detail_margin_views"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imdb_rating_layout"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imdb_placeholder"
                            android:layout_width="@dimen/imdb_extension_icon_width"
                            android:layout_height="@dimen/imdb_extension_icon_height"
                            android:layout_marginLeft="@dimen/intra_detail_margin_views"
                            android:background="@drawable/imdb_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/imdb_extension_icon_height"
                            android:layout_marginLeft="@dimen/intra_detail_margin_views"
                            android:gravity="center"
                            android:text="@string/rating"
                            android:textColor="@color/off_white"
                            android:textSize="@dimen/list_item_text_size" />

                        <TextView
                            android:id="@+id/show_imdb_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/imdb_extension_icon_height"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:textColor="@color/off_white"
                            android:textSize="@dimen/list_item_text_size"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/trakt_rating_layout"
                        android:gravity="right">

                        <ImageView
                            android:id="@+id/trakt_placeholder"
                            android:layout_width="@dimen/trakt_extension_icon_width"
                            android:layout_height="@dimen/trakt_extension_icon_height"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"
                            android:background="@drawable/trakt_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/trakt_extension_icon_height"
                            android:layout_marginLeft="@dimen/intra_detail_margin_views"
                            android:gravity="center"
                            android:text="@string/rating"
                            android:textColor="@color/off_white"
                            android:textSize="@dimen/list_item_text_size" />

                        <TextView
                            android:id="@+id/show_trakt_ratings"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/trakt_extension_icon_height"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="@dimen/intra_detail_margin_views"
                            android:gravity="center"
                            android:text="N/A"
                            android:textColor="@color/off_white"
                            android:textSize="@dimen/list_item_text_size"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/intra_detail_margin_views"
                    android:layout_marginTop="@dimen/inter_detail_margin_views"
                    android:text="@string/genres"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/detail_header_text_size" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/genres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/intra_detail_margin_views"
                            android:layout_marginTop="@dimen/intra_detail_margin_views"
                            android:text="@string/genres"
                            android:textColor="@color/off_white"
                            android:textSize="@dimen/secondary_list_item_text_size" />

                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/intra_detail_margin_views"
                    android:layout_marginTop="@dimen/inter_detail_margin_views"
                    android:text="@string/overview"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/detail_header_text_size" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent">

                    <TextView
                        android:id="@+id/show_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:layout_marginTop="@dimen/intra_detail_margin_views"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/secondary_list_item_text_size" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/intra_detail_margin_views"
                    android:layout_marginTop="@dimen/inter_detail_margin_views"
                    android:text="@string/awards"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/detail_header_text_size" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent">

                    <TextView
                        android:id="@+id/show_awards"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:layout_marginTop="@dimen/intra_detail_margin_views"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/secondary_list_item_text_size" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/intra_detail_margin_views">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:layout_marginTop="@dimen/inter_detail_margin_views"
                        android:gravity="center"
                        android:text="@string/trailers"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/detail_header_text_size" />

                    <ImageView
                        android:id="@+id/show_trailer"
                        android:layout_width="72dip"
                        android:layout_height="30dip"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="@dimen/intra_detail_margin_views"
                        android:background="@drawable/youtube_icon" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/view_casts_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/black"
                    android:layout_marginTop="@dimen/inter_detail_margin_views"
                    android:layout_marginBottom="@dimen/intra_detail_margin_views">

                    <ImageView
                        android:id="@+id/view_casts_indicator"
                        android:layout_width="20dip"
                        android:layout_height="30dip"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/intra_detail_margin_views"
                        android:background="@drawable/next_screen_indicator" />

                    <TextView
                        android:id="@+id/view_casts_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@id/view_casts_indicator"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:text="View Casts"
                        android:textColor="@color/off_white"
                        android:textSize="@dimen/detail_header_text_size" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/intra_detail_margin_views"
                    android:layout_marginTop="@dimen/inter_detail_margin_views"
                    android:text="Explore More"
                    android:textColor="@color/off_white"
                    android:textSize="@dimen/detail_header_text_size" />

                <LinearLayout
                    android:id="@+id/explore_more_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@color/black"
                    android:layout_marginBottom="@dimen/intra_detail_margin_views">

                    <ImageView
                        android:id="@+id/explore_imdb"
                        android:layout_width="@dimen/imdb_extension_icon_width"
                        android:layout_height="@dimen/imdb_extension_icon_height"
                        android:layout_marginTop="@dimen/inter_detail_margin_views"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:src="@drawable/imdb_icon" />

                    <ImageView
                        android:id="@+id/explore_trakt"
                        android:layout_width="@dimen/trakt_extension_icon_width"
                        android:layout_height="@dimen/trakt_extension_icon_height"
                        android:layout_marginTop="@dimen/inter_detail_margin_views"
                        android:layout_marginLeft="@dimen/intra_detail_margin_views"
                        android:src="@drawable/trakt_icon"
                        android:layout_marginBottom="@dimen/intra_detail_margin_views" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</FrameLayout>